# infino

./: .gitignore  .pr_agent.toml  AGENTS.md  Cargo.toml  README.md  context7.json  crate-docs.md  llms.txt  public-api.txt
.devin/: wiki.json
.github/workflows/: ci.yml  node-publish-gemfury.yml  pr-review.yml  release-on-merge.yml  release-prep.yml
benches/: README.md
benches/fts/: superfile.rs  supertable.rs
benches/utils/: executors.rs  markdown.rs  storage_options.rs  superfile.rs  supertable.rs  tiers.rs
benches/vector/: superfile.rs  supertable.rs
docs/architecture/: on-disk-layout.md  overview.md  supertable.md
infino-node/: Cargo.toml  README.md  package.json
infino-node/__test__/: gcs.e2e.test.mjs
infino-node/infino/: index.ts
infino-node/src/: lib.rs
infino-python/: Cargo.toml  README.md  pyproject.toml
infino-python/python/infino/: _infino.pyi
infino-python/src/: lib.rs
infino-python/tests/: test_gcs_e2e.py
src/: error.rs  lib.rs  runtime_bridge.rs
src/catalog/: mod.rs  uri.rs
src/config/: config.yaml  mod.rs
src/memory/: datafusion_pool.rs  mod.rs
src/storage/: gcs.rs  local_fs.rs  mod.rs  s3.rs
src/superfile/: builder.rs  error.rs  reader.rs
src/superfile/fts/: builder.rs  fst_value.rs  reader.rs  tokenize.rs
src/superfile/vector/: builder.rs  distance.rs  mod.rs  quant.rs  reader.rs  rerank_codec.rs  rotation.rs  simd_dispatch.rs  sq8_simd.rs
src/supertable/: error.rs  handle.rs  lazy_source.rs  mod.rs  options.rs  stats.rs  writer.rs
src/supertable/compaction/: mod.rs
src/supertable/gc/: mod.rs
src/supertable/manifest/: aggregates.rs  bloom.rs  commit.rs  encoding.rs  list.rs  list_prune.rs  mod.rs  options_hash.rs  part.rs  partition.rs
src/supertable/optimize/: mod.rs
src/supertable/query/: fts.rs  hierarchical_iter.rs  mod.rs  skip.rs  sql.rs  superfile_reader.rs  vector.rs
src/supertable/reader_cache/: config.rs  disk.rs  in_memory.rs  mod.rs
src/supertable/utils/: idgen.rs  vector_split.rs
src/supertable/wal/: persistence.rs  pipeline.rs  tombstones_admin.rs
src/test_helpers/: brute_force_bm25.rs  cas_conformance.rs  mod.rs
tests/: supertable_commit_crash_localfs.rs  supertable_concurrent_processes.rs
tests/superfile/: main.rs  pipeline.rs
tests/superfile/format/: crc_corruption.rs  lazy_byte_source.rs  mod.rs
tests/superfile/fts/: brute_force_oracle.rs  mod.rs  must_should.rs
tests/superfile/vector/: mod.rs  reservoir_recall.rs
tests/supertable/: compact_gc.rs  main.rs
tests/supertable/commit/: id_uniqueness.rs  mod.rs  open_refresh.rs  partition_assignment.rs  persistence.rs  pointer_atomic.rs  stats.rs
tests/supertable/disk_cache/: basic.rs  end_to_end.rs  hybrid.rs  mod.rs  sweep.rs
tests/supertable/manifest/: lazy_open.rs
tests/supertable/query/: brute_force_oracle.rs  hierarchical.rs  mod.rs  skip_pruning.rs
tests/supertable/storage/: compact_azure.rs  mod.rs  smoke_azure.rs  smoke_gcs.rs  smoke_s3.rs
