[package]
name = "infino"
version = "0.1.2"
edition = "2024"
# Pinned to the toolchain in rust-toolchain.toml. The vector SIMD path
# uses AVX-512 intrinsics stabilized in 1.89 and std APIs from 1.87, so
# the real floor is well above the 2024-edition minimum.
rust-version = "1.95"
license = "Apache-2.0"
description = "A fast retrieval engine that stores data on object storage and runs SQL, full-text search, and vector search over it from a single system — search-on-Parquet."
repository = "https://github.com/infino-ai/infino"
homepage = "https://github.com/infino-ai/infino"
readme = "crate-docs.md"
keywords = ["search", "vector", "full-text", "parquet", "object-storage"]
categories = ["database", "database-implementations"]
# `cargo publish` packages the package directory; the workspace `exclude`
# below does NOT keep the standalone Python bindings out of the crate
# tarball, so exclude them from the package explicitly.
#
# The locomo-recall example loads an 18 MB frozen-vector fixture (and a
# small JS script that regenerates it) at runtime; both are kept out of
# the published crate — they would push the tarball past the registry
# size limit and aren't needed to build the library or the example.
exclude = [
    "infino-python/",
    "examples/locomo-recall/fixture.json",
    "examples/locomo-recall/embed.mjs",
]
# Disable cargo's auto-discovery of `benches/*.rs` as bench
# binaries — every bench target is declared explicitly via
# `[[bench]]` below. Without this, shared helper files like
# `benches/common.rs` get compiled as standalone (empty) bench
# binaries.
autobenches = false

# Declare an explicit workspace so the bench-utils crate is a
# first-class member rather than only a dev-dependency path
# package. Without this, `infino` (root) dev-depends on
# `infino-bench-utils`, which depends back on `infino` — a
# dev-dependency cycle that makes the v2/v3 feature resolver
# panic ("did not find features for …") on any
# `cargo … -p infino-bench-utils`. Listing it as a member lets
# the resolver compute its features as a member, so the crate
# can be checked/built/tested directly.
[workspace]
members = ["benches/utils"]
# The language bindings are built standalone (maturin / napi-rs), not as
# part of this workspace — so the core Rust crate never requires a Python
# or Node toolchain to build. See `infino-python/README.md` and
# `infino-node/README.md`.
exclude = ["infino-python", "infino-node"]

[lib]
path = "src/lib.rs"
# Don't run the lib's `#[test]` harness under `cargo bench` (it would just
# enumerate every unit test as "ignored"). Unit tests still run via `cargo test`.
bench = false

[features]
# `mimalloc` installs mimalloc as the `#[global_allocator]` (see
# `lib.rs`). Default-on for the standalone library, binaries, and
# benches. An embedding that is loaded into a host process with its own
# allocator — notably the Python extension module — must turn it OFF
# (`default-features = false`): a second global allocator dlopened into a
# live process segfaults. Not part of the public API surface.
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
# Exposes `infino::test_helpers` — convenience builders for
# Decimal128 id columns, default tokenizers, default vector
# configs. Enabled explicitly by the Makefile test / bench / coverage
# lanes (`--features test-helpers`), transitively by benches via the
# `infino-bench-utils` dev-dependency, and by lib unit tests via
# `cfg(test)`. The curated public surface is guarded by a
# `cargo-public-api` snapshot, NOT by feature-gated example builds:
# within this package the `infino-bench-utils` dev-dependency forces
# `test-helpers` across the whole dev-target graph (tests, benches,
# AND examples), so no in-package example can build with it off.
test-helpers = []
# Opt-in diagnostic benches that are useful for storage/request-shape
# work or release-profile recall gates, but should not run as part of a
# plain `cargo bench`.
bench-diagnostics = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
# Format / parquet
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
parquet = { version = "58", features = ["async", "object_store"] }

# SIMD primitives
bitpacking = "0.9"
crc-fast = "1.10.0"
wide = "1"
fst = "0.4"
bytemuck = "1"

# Allocator strategy: mimalloc as #[global_allocator], bumpalo for
# per-query scratch, plus the custom MemoryArena in fts/arena.rs.
mimalloc = { version = "0.1", default-features = false, optional = true }
bumpalo = { version = "3", features = ["collections"] }
rustc-hash = "2"
static_assertions = "1"

# Numerics
rand = "0.10"
rand_distr = "0.6"
rayon = "1"

# Errors / serde
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Supertable: lock-free manifest swap + superfile ids + FTS bloom hash.
# Manifest is held in ArcSwap<Manifest> for reader-writer isolation;
# SuperfileEntry.superfile_id is a v4 UUID; the FTS term-presence bloom
# uses XXH3-64 — terms come from a closed corpus (no HashDoS risk),
# and XXH3 is significantly faster than SipHash on the miss path
# where hash cost dominates.
arc-swap = "1"
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
num_cpus = "1"

# Tombstone bitmaps.
roaring = "0.10"
# WAL state-doc timestamps.
chrono = { version = "0.4", features = ["serde"] }

# Hierarchical config (YAML defaults + file overrides + env). Used by
# the `config` module; see infino/src/config/mod.rs.
figment = { version = "0.10", features = ["yaml", "env"] }

# Logging
tracing = "0.1"

# SQL surface (`Supertable::query_sql`). DataFusion's TableProvider /
# ExecutionPlan trait surface is async, so a runtime is required even
# though our public API stays sync — `block_on` runs DataFusion plans
# against a per-Supertable cached Runtime. Tokio is single-worker
# here: it drives DataFusion's I/O state machine, not CPU-bound work
# (CPU work for skip + fan-out lives on the rayon reader pool).
datafusion = "53"
# `macros` enables `#[tokio::test]` for the async DataFusion
# integration tests; runtime weight on a release build is just the
# proc-macro, so we keep it in [dependencies] rather than re-listing
# tokio in [dev-dependencies] solely for the macro feature.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }

# Object-store backend. `object_store` is already
# transitive via DataFusion 53 (0.12.5) and parquet 58 (0.13.2);
# we pin our direct usage to 0.13 to match parquet — which is the
# version with the conditional-put surface we need for the
# manifest pointer's OCC + atomic-create semantics.
object_store = { version = "0.13", features = ["aws", "azure"] }
# Async-trait erasure for `StorageProvider` and the
# `LazyByteSource` trait. Both need to be
# usable through `Arc<dyn ...>` for cross-layer sharing, which
# requires boxed futures.
async-trait = "0.1"

# Manifest-part serde. Avro for the dense per-superfile
# tier (matches Iceberg's manifest-file choice at scale); zstd
# for compression; blake3 for content-addressing.
#
# All three are already transitive — `apache-avro` is net new
# but the rest are promoted to direct so versions don't drift
# under us when transitive callers update.
apache-avro = "0.17"
blake3 = "1"
zstd = "0.13"

# Manifest list JSON. The list tier carries byte-valued
# fields (arrow-ipc schema, per-part content_hash bytes, aggregate
# skip summaries) as base64 strings — JSON arrays of bytes would
# bloat the list by ~3-4× and break `jq` debuggability, which is
# the whole reason the list is JSON and not Avro.
base64 = "0.22"

# In-memory hierarchical Manifest. The `parts` cache
# is a DashMap<PartId, OnceCell<Arc<ManifestPart>>> so concurrent
# queries on a cold part coalesce to a single StorageProvider::get.
# DashMap's sharded locking lets the manifest part hot path (cache
# hit on a known PartId) avoid contention.
dashmap = "6"

# Manifest commit parallel issue. `futures::join_all`
# fans out per-part PUTs alongside the manifest list PUT in
# `commit_manifest` so hierarchical commits don't pay an extra
# RTT vs the flat-manifest baseline.
futures = "0.3"

# Disk cache memory-map. Tier 1 cache files are
# mmap'd; `Bytes::from_owner(Mmap)` lets the rest of the read
# path consume cached bytes through the same `Bytes` view that
# the in-memory store uses today.
memmap2 = "0.9"

# Process RSS for `Supertable::stats()`. Cross-
# platform (macOS / Linux / Windows). The crate is tiny and
# has no transitive deps — pulls in libc on Unix and uses
# Mach task_info on macOS / /proc/self/statm on Linux. We
# read it once per `stats()` call (cheap syscall) so the
# observability hook stays allocation-free on the hot path.
#
# `always_use_statm` forces the Linux path to read
# /proc/self/statm instead of the default /proc/self/smaps.
# smaps is a multi-page file whose contents the kernel
# regenerates per-read by walking the process's VMA list;
# under heavy concurrent allocation (e.g. cargo's parallel
# test execution) the read can return a partial / malformed
# buffer, parsing zero `Rss:` lines and surfacing as
# `physical_mem = 0`. statm is one line of fixed-format
# integers and doesn't suffer the same race.
memory-stats = { version = "1.2", features = ["always_use_statm"] }

# Advisory file locks for the LocalFs pointer-rename window
# The LocalFs `put_if_match` is implemented as
# read-then-overwrite (object_store::LocalFileSystem
# doesn't support native PutMode::Update); without a lock,
# two processes can both see the same prior etag and race
# the overwrite. `fs4` exposes an `AsyncFileExt` trait on
# `tokio::fs::File` so we can hold the lock across the
# head + put_opts await points without spawning a separate
# blocking task. Already a transitive dep — promoted here
# so the version is pinned explicitly.
fs4 = { version = "0.13", features = ["tokio"] }

# 128-bit Snowflake id generator for the supertable's
# auto-injected `_id` column. `ferroid::BasicSnowflakeGenerator`
# is single-threaded by construction (interior-mutable `Cell`)
# — exactly the shape the writer-slot-locked append() path
# needs. We use the `define_snowflake_id!` macro to set our
# own bit layout (64 ms + 40 worker + 24 seq) rather than
# adopting a built-in Twitter/Discord variant.
ferroid = { version = "2", features = ["std", "alloc", "snowflake", "basic"] }

# Scratch tempdir + spill file management for the streaming
# `VectorBuilder`. Promoted from dev-dependencies
# because builder.rs holds an `Arc<TempDir>` per builder to
# back per-centroid bucket files and per-column input spills.
tempfile = "3"
hashbrown = "0.17.1"

[dev-dependencies]
# No `infino = { path=".", features=["test-helpers"] }` self-reference:
# it is redundant. `infino-bench-utils` below already depends on
# `infino` with `features=["test-helpers"]`, and dev-dependency
# features unify across the whole dev-target graph — so `test-helpers`
# is on for every test, bench, AND example build regardless. Integration
# tests / benches / coverage also pass `--features test-helpers`
# explicitly (see the Makefile) so the dependency is documented at the
# call site rather than relied on implicitly. Genuinely public,
# surface-only examples will live in a separate workspace crate (which
# depends on `infino` WITHOUT `test-helpers`) when the catalog API
# lands; the public surface itself is guarded by `cargo-public-api`.
infino-bench-utils = { path = "benches/utils" }

# `test-util` adds tokio's paused-clock test surface
# (`start_paused`), which lets concurrency regression tests drive
# sleep-based polling loops deterministically instead of racing real
# timers (see `reader_cache::disk::tests`). Dev-only feature union on
# the existing tokio dependency — no new crate.
tokio = { version = "1", features = ["test-util"] }

proptest = "1"
hdrhistogram = "7"
# s3s + s3s-fs power the "real S3 wire protocol" smoke test.
# s3s is the S3-compatible HTTP server library; s3s-fs is its
# filesystem backend. The test crate spawns s3s-fs on a random
# port in a tempdir; the supertable's S3StorageProvider talks to
# it via object_store::aws::AmazonS3.
s3s = "0.13"
s3s-fs = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
futures = "0.3"

# Comparator for the supertable's FTS bloom — bench-only.
fastbloom = "0.17"

# Azure Blob smoke test container setup. object_store exposes no
# container-create call, and the Azurite image ships no CLI, so the
# test creates its container with a SharedKey-signed REST PUT:
# reqwest issues the request, sha2 backs a manual HMAC-SHA256 (avoids
# the pre-release `hmac` crate), base64 decodes the well-known
# emulator key, httpdate stamps the RFC1123 `x-ms-date`. All four are
# already transitive; pinned here so the versions don't drift.
reqwest = { version = "0.12", default-features = false }
sha2 = "0.10"
base64 = "0.22"
httpdate = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

# Benches must measure true release performance. Cargo's built-in
# `bench` profile defaults to opt-level 3 but does NOT inherit the
# release tuning above — it leaves `lto` off and `codegen-units = 16`,
# which under-optimizes the lib relative to a real release build and
# would make `cargo bench` report slower-than-production numbers.
# Mirror `[profile.release]` so the bench lane is representative.
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

# Test profile uses Cargo's default opt-level (0). The realistic-
# scale recall suites that previously forced opt-level=3 here
# (recall.rs at 10K×384 dim, fts_recall_at_scale.rs at 20K docs)
# have been moved to `benches/` where they compile + run under
# release mode automatically. This keeps `cargo test`'s inner loop
# fast for correctness work while preserving the scale-correctness
# assertions on the bench lane.

# Topic-bundled integration test binaries. One binary per
# top-level layer keeps link time down at scale (10× faster
# cold link than N per-file binaries) and amortizes the
# tokio/rayon/fixture startup overhead. Run a subtree with
# cargo's module-path filter, e.g.
#   cargo test --test superfile fts::
#   cargo test --test superfile format::crc_corruption
[[test]]
name = "superfile"
path = "tests/superfile/main.rs"
bench = false

[[test]]
name = "supertable"
path = "tests/supertable/main.rs"
bench = false

# The one and only benchmark binary. Everything — the tier × modality
# matrix and the standalone diagnostics (scale / tombstone / update /
# sql-diag / object-store) — is selected by positional tokens at runtime,
# e.g.
#   cargo bench                       # == cargo bench -- all
#   cargo bench -- supertable
#   cargo bench -- superfile fts
#   cargo bench -- supertable sql warm
#   cargo bench -- tombstone
# All bench logic lives in the `infino-bench-utils` library; this target is
# just the dispatching `main`. Benches don't build on a normal `cargo build`.
[[bench]]
name = "bench"
path = "benches/bench/main.rs"
harness = false

# `quickstart` is the out-of-the-box entry point: it uses only the
# shipped `infino::*` surface, so `cargo run --example quickstart` works
# from a fresh clone with no extra features.
[[example]]
name = "quickstart"

# `demo` and `profile_fts_build` exercise the format-layer internals
# (superfile builder / reader, `test_helpers` fixtures), so they declare
# the `test-helpers` feature they semantically need. (In practice that
# feature is already forced on across the dev graph by the
# `infino-bench-utils` dev-dependency — see its note above — so this is
# documentation of intent, not an independent gate.)
[[example]]
name = "demo"
required-features = ["test-helpers"]

[[example]]
name = "profile_fts_build"
required-features = ["test-helpers"]

# `locomo-recall` uses only the public `infino::*` surface (connect, create_table,
# the search methods, query_sql), so no `test-helpers`. Multi-file example:
# examples/locomo-recall/{main.rs, embed.mjs, fixture.json, README.md}.
[[example]]
name = "locomo-recall"
path = "examples/locomo-recall/main.rs"

