[package]
name = "infino-python"
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
# `import infino` → the extension module's name is the cdylib name.
name = "infino"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# The core crate, consumed through its CURATED PUBLIC API only — no
# `test-helpers`. Building these bindings therefore also validates that
# the public surface is sufficient to drive a real consumer.
# `default-features = false` drops infino's mimalloc `#[global_allocator]`:
# a Python extension module must not install a second global allocator
# into the interpreter process (it segfaults), so the module uses the
# system allocator.
infino = { path = "..", default-features = false }
# Arrow is the interchange. The `pyarrow` feature pulls `arrow-pyarrow`
# (pyo3 0.28), so pyo3 here is pinned to the SAME version to share types.
arrow = { version = "58", features = ["pyarrow"] }
arrow-array = "58"
arrow-schema = "58"
# `abi3-py39` builds a single wheel compatible with CPython >= 3.9 (the
# stable ABI), so distribution needs one wheel per platform rather than
# one per Python version.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
# Parse a SQL predicate string (for `update` / `delete`) into a DataFusion
# `Expr` — the type the core `update` / `delete` take. Pinned to infino's
# datafusion version so the `Expr` type unifies with the core signatures;
# feature unification reuses infino's already-compiled datafusion.
datafusion = "54"
